--- a/frontend/src/components/pages/wrapUp/WrapUpPage.scss
+++ b/frontend/src/components/pages/wrapUp/WrapUpPage.scss
@@ -24,14 +24,11 @@
 }
 
 .page.wrap-up {
-  padding-inline: 1em;
   position: absolute;
   z-index: 30;
-
   background-color: #fff;
   display: block;
   top: 0;
-  // height: 100%;
   height: 100vh;
   left: 50%;
   width: 100vw;
@@ -40,6 +37,7 @@
     overflow-y: scroll;
     height: 100%;
     padding-top: $header_height * 2;
+    padding-inline: 1em;
   }
 
   &.visible {
@@ -53,9 +51,9 @@
     animation: slide-right 0.5s cubic-bezier(0.51, 0.92, 0.24, 1) forwards;
   }
 
-  & > * {
-    padding-bottom: 2em;
-  }
+  // & > * {
+  //   // padding-bottom: 2em;
+  // }
 
   h1 {
     margin: auto;
